--- a/source_code/HTML/Preferences.html
+++ b/source_code/HTML/Preferences.html
@@ -17,7 +17,7 @@
 
 <body>
 	<div class="container" style="margin-top: 20px;">
-	
+
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<div class="panel panel-login">
@@ -42,14 +42,14 @@
 								</label>
 
 								<p>File locator:</p>
-								<select class="form-group form-control form-control-lg dropdown"  name="filelocator"
+								<select class="form-group form-control form-control-lg dropdown" name="filelocator"
 									id="filelocator">
 									<option>'_cc'</option>
 									<option>'_ss00'</option>
 								</select>
 							</div>
 							<div class="column">
-							
+
 								<p>Diam Calibration:</p>
 								<select class="form-group form-control form-control-lg dropdown" name="diamcalitype"
 									id="diamcalitype">
@@ -71,9 +71,9 @@
 									<option>off</option>
 								</select>
 
-								<p>Debug:</p>
+								<p>Debug Mode:</p>
 								<select class="form-group form-control form-control-lg dropdown" name="debug"
-									id="noiseremoval">
+									id="debug">
 									<option>on</option>
 									<option>off</option>
 								</select>
@@ -92,88 +92,89 @@
 								</form>
 							</div>
 						</div>
-					</div>
 
+
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<script type="text/javascript">
 
-		function setup(htmlComponent) {
-			var initialData = JSON.parse(htmlComponent.Data);
+		<script type="text/javascript">
 
-			// write preferences as default values to inputs
-			document.getElementById("fcsfile").checked = initialData.fcsfile;
-			document.getElementById("matfile").checked = initialData.matfile;
-			document.getElementById("csvfile").checked = initialData.csvfile;
+			function setup(htmlComponent) {
+				var initialData = JSON.parse(htmlComponent.Data);
 
-			for (var i = 0; i < initialData.filelocatorNum; i++) {
-				document.getElementById("filelocator").options[i].selected = initialData.filelocatorSelection[i];
-			}
+				// write preferences as default values to inputs
+				document.getElementById("fcsfile").checked = initialData.fcsfile;
+				document.getElementById("matfile").checked = initialData.matfile;
+				document.getElementById("csvfile").checked = initialData.csvfile;
 
-			for (var i = 0; i < initialData.outlierremovalNum; i++) {
-				document.getElementById("outlierremoval").options[i].selected = initialData.outlierremovalSelection[i];
-			}
-
-			for (var i = 0; i < initialData.diamcalitypeNum; i++) {
-				document.getElementById("diamcalitype").options[i].selected = initialData.diamcalitypeSelection[i];
-			}
-
-			for (var i = 0; i < initialData.noiseremovalNum; i++) {
-				document.getElementById("noiseremoval").options[i].selected = initialData.noiseremovalSelection[i];
-			}
-
-			for (var i = 0; i < initialData.noiseremovalNum; i++) {
-				document.getElementById("debug").options[i].selected = initialData.noiseremovalSelection[i];
-			}
-			// upon click save overwrite the json array to send back to MATLAB
-			document.getElementById("login-submit").addEventListener("click", function (event) {
-
-				initialData.Response = "Save";
-				initialData.fcsfile = document.getElementById("fcsfile").checked;
-				initialData.matfile = document.getElementById("matfile").checked;
-				initialData.csvfile = document.getElementById("csvfile").checked;
-
-				let Selection = [];
 				for (var i = 0; i < initialData.filelocatorNum; i++) {
-					Selection[i] = document.getElementById("filelocator").options[i].selected;
+					document.getElementById("filelocator").options[i].selected = initialData.filelocatorSelection[i];
 				}
-				initialData.filelocatorSelection = Selection;
 
-				Selection = [];
 				for (var i = 0; i < initialData.outlierremovalNum; i++) {
-					Selection[i] = document.getElementById("outlierremoval").options[i].selected;
+					document.getElementById("outlierremoval").options[i].selected = initialData.outlierremovalSelection[i];
 				}
-				initialData.outlierremovalSelection = Selection;
 
-				Selection = [];
 				for (var i = 0; i < initialData.diamcalitypeNum; i++) {
-					Selection[i] = document.getElementById("diamcalitype").options[i].selected;
+					document.getElementById("diamcalitype").options[i].selected = initialData.diamcalitypeSelection[i];
 				}
-				initialData.diamcalitypeSelection = Selection;
 
-				Selection = [];
 				for (var i = 0; i < initialData.noiseremovalNum; i++) {
-					Selection[i] = document.getElementById("noiseremoval").options[i].selected;
+					document.getElementById("noiseremoval").options[i].selected = initialData.noiseremovalSelection[i];
 				}
-				initialData.noiseremovalSelection = Selection;
 
-				Selection = [];
-				for (var i = 0; i < initialData.noiseremovalNum; i++) {
-					Selection[i] = document.getElementById("debug").options[i].selected;
+				for (var i = 0; i < initialData.debugNum; i++) {
+					document.getElementById("debug").options[i].selected = initialData.debugSelection[i];
 				}
-				initialData.noiseremovalSelection = Selection;
+				// upon click save overwrite the json array to send back to MATLAB
+				document.getElementById("login-submit").addEventListener("click", function (event) {
 
-				htmlComponent.Data = JSON.stringify(initialData);
+					initialData.Response = "Save";
+					initialData.fcsfile = document.getElementById("fcsfile").checked;
+					initialData.matfile = document.getElementById("matfile").checked;
+					initialData.csvfile = document.getElementById("csvfile").checked;
 
-			});
+					let Selection = [];
+					for (var i = 0; i < initialData.filelocatorNum; i++) {
+						Selection[i] = document.getElementById("filelocator").options[i].selected;
+					}
+					initialData.filelocatorSelection = Selection;
 
-		};
+					Selection = [];
+					for (var i = 0; i < initialData.outlierremovalNum; i++) {
+						Selection[i] = document.getElementById("outlierremoval").options[i].selected;
+					}
+					initialData.outlierremovalSelection = Selection;
+
+					Selection = [];
+					for (var i = 0; i < initialData.diamcalitypeNum; i++) {
+						Selection[i] = document.getElementById("diamcalitype").options[i].selected;
+					}
+					initialData.diamcalitypeSelection = Selection;
+
+					Selection = [];
+					for (var i = 0; i < initialData.noiseremovalNum; i++) {
+						Selection[i] = document.getElementById("noiseremoval").options[i].selected;
+					}
+					initialData.noiseremovalSelection = Selection;
+
+					Selection = [];
+					for (var i = 0; i < initialData.debugNum; i++) {
+						Selection[i] = document.getElementById("debug").options[i].selected;
+					}
+					initialData.debugSelection = Selection;
+
+					htmlComponent.Data = JSON.stringify(initialData);
+
+				});
+
+			};
 
 
 
-	</script>
+		</script>
 </body>
 
 </html>
