--- a/source_code/HTML/Preferences.html
+++ b/source_code/HTML/Preferences.html
@@ -16,165 +16,252 @@
 </head>
 
 <body>
-	<div class="container" style="margin-top: 20px;">
-
+	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<div class="panel panel-login">
 					<div class="panel-body">
-						<div class="row" style="padding:0%; border: 0px;">
-							<h3>User Preferences</h3>
+						<div class="titlerow" style="padding:0%; border: 0px;">
+							<h3>General</h3>
 						</div>
-						<div class="row inputs">
+						<div class="row">
+
 							<div class="column">
-								<p>Default outputs:</p>
-								<label class="form-control">
-									<input type="checkbox" name="checkbox" id="fcsfile" />
-									.fcs files
-								</label>
-								<label class="form-control">
-									<input type="checkbox" name="checkbox" id="matfile" />
-									.mat files
-								</label>
-								<label class="form-control">
-									<input type="checkbox" name="checkbox" id="csvfile" />
-									.xlsx files
-								</label>
+								<div class="inputs">
 
-								<p>File locator:</p>
-								<select class="form-group form-control form-control-lg dropdown" name="filelocator"
-									id="filelocator">
-									<option>'_cc'</option>
-									<option>'_ss00'</option>
-								</select>
+									<p>Default outputs:</p>
+									<label class="form-control">
+										<input type="checkbox" name="checkbox" id="fcsfile" />
+										.fcs files
+									</label>
+									<label class="form-control">
+										<input type="checkbox" name="checkbox" id="matfile" />
+										.mat files
+									</label>
+									<label class="form-control">
+										<input type="checkbox" name="checkbox" id="csvfile" />
+										.xlsx files
+									</label>
+								</div>
+
 							</div>
+
 							<div class="column">
+								<div class="inputs">
 
-								<p>Diam Calibration:</p>
-								<select class="form-group form-control form-control-lg dropdown" name="diamcalitype"
-									id="diamcalitype">
-									<option>auto</option>
-									<option>static</option>
-								</select>
+									<p>File locator:</p>
+									<select class="form-group form-control form-control-lg dropdown" name="filelocator"
+										id="filelocator">
+										<option>'_cc'</option>
+										<option>'_ss00'</option>
+									</select>
+								</div>
 
-								<p>Outlier Removal:</p>
-								<select class="form-group form-control form-control-lg dropdown" name="outlierremoval"
-									id="outlierremoval">
-									<option>on</option>
-									<option>off</option>
-								</select>
+								<div class="inputs">
 
-								<p>Noise Removal:</p>
-								<select class="form-group form-control form-control-lg dropdown" name="noiseremoval"
-									id="noiseremoval">
-									<option>on</option>
-									<option>off</option>
-								</select>
-
-								<p>Debug Mode:</p>
-								<select class="form-group form-control form-control-lg dropdown" name="debug"
-									id="debug">
-									<option>on</option>
-									<option>off</option>
-								</select>
+									<p>Debug Mode:</p>
+									<select class="form-group form-control form-control-lg dropdown" name="debug"
+										id="debug">
+										<option>on</option>
+										<option>off</option>
+									</select>
+								</div>
 							</div>
+
+						</div>
+
+						<div class="titlerow" style="padding:0%; border: 0px;">
+							<h3>Diameter Calibration</h3>
 						</div>
 
 						<div class="row">
-							<div class="col-lg-12">
-								<form id="pref-form" action="#" method="post" role="form" style="display: block;">
-									<div class="row">
-										<div class="col-sm-8 col-sm-offset-2">
-											<button type="button" name="login-submit" id="login-submit" tabindex="4"
-												class="form-control btn btn-login" onclick="">Save</button>
-										</div>
-									</div>
-								</form>
+
+							<div class="column">
+								<div class="inputs">
+
+									<p>Diam Calibration:</p>
+									<select class="form-group form-control form-control-lg dropdown" name="diamcalitype"
+										id="diamcalitype">
+										<option>dynamic</option>
+										<option>static</option>
+									</select>
+								</div>
+
+							</div>
+
+							<div class="column">
+								<div class="inputs">
+
+									<p>Dynamic Event Limit:</p>
+									<input class="form-control" type="number" id="DynamicCalSpikeInThresh">
+								</div>
+
+								<div class="inputs">
+
+									<p>Static Event Limit:</p>
+									<input class="form-control" type="number" id="StaticCalSpikeInThresh">
+								</div>
+
 							</div>
 						</div>
 
 
+						<div class="titlerow" style="padding:0%; border: 0px;">
+							<h3>Outlier Removal</h3>
+						</div>
+
+						<div class="row">
+
+							<div class="column">
+
+								<div class="inputs">
+									<p>Outlier Removal:</p>
+									<select class="form-group form-control form-control-lg dropdown"
+										name="outlierremoval" id="outlierremoval">
+										<option>on</option>
+										<option>off</option>
+									</select>
+
+								</div>
+
+								<div class="inputs">
+									<p>CV Range:</p>
+									<input class="form-control" type="number" id="Threshold_SpikeIn_CV" value="">
+								</div>
+
+								<div class="inputs">
+
+									<p>SI Range:</p>
+									<input class="form-control" type="number" id="Threshold_SpikeIn_SI">
+								</div>
+
+							</div>
+
+							<div class="column">
+
+								<div class="inputs">
+									<p>TT Range:</p>
+									<input class="form-control" type="number" id="Threshold_SpikeIn_TT">
+								</div>
+
+								<div class="inputs">
+									<p>SNTT Range:</p>
+									<input class="form-control" type="number" id="Threshold_SpikeIn_TTSN">
+								</div>
+
+							</div>
+						</div>
+
+						<div class="col-lg-12">
+							<form id="pref-form" action="#" method="post" role="form" style="display: block;">
+								<div class="col-sm-8 col-sm-offset-2">
+									<button type="button" name="login-submit" id="reset" tabindex="4"
+										class="form-control btn btn-login" onclick="">Reset</button>
+								</div>
+							</form>
+						</div>
+
+						<div class="col-lg-12">
+							<form id="pref-form" action="#" method="post" role="form"
+								style="display: block; padding-top: 15px">
+								<div class="col-sm-8 col-sm-offset-2">
+									<button type="button" name="login-submit" id="login-submit" tabindex="4"
+										class="form-control btn btn-login" onclick="">Save</button>
+								</div>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<script type="text/javascript">
+	<script type="text/javascript">
 
-			function setup(htmlComponent) {
-				var initialData = JSON.parse(htmlComponent.Data);
+		function setup(htmlComponent) {
 
-				// write preferences as default values to inputs
-				document.getElementById("fcsfile").checked = initialData.fcsfile;
-				document.getElementById("matfile").checked = initialData.matfile;
-				document.getElementById("csvfile").checked = initialData.csvfile;
+			var initialData = JSON.parse(htmlComponent.Data);
 
+			// write preferences as default values to inputs
+			document.getElementById("fcsfile").checked = initialData.fcsfile;
+			document.getElementById("matfile").checked = initialData.matfile;
+			document.getElementById("csvfile").checked = initialData.csvfile;
+
+			for (var i = 0; i < initialData.filelocatorNum; i++) {
+				document.getElementById("filelocator").options[i].selected = initialData.filelocatorSelection[i];
+			}
+
+			for (var i = 0; i < initialData.outlierremovalNum; i++) {
+				document.getElementById("outlierremoval").options[i].selected = initialData.outlierremovalSelection[i];
+			}
+
+			for (var i = 0; i < initialData.diamcalitypeNum; i++) {
+				document.getElementById("diamcalitype").options[i].selected = initialData.diamcalitypeSelection[i];
+			}
+
+			for (var i = 0; i < initialData.debugNum; i++) {
+				document.getElementById("debug").options[i].selected = initialData.debugSelection[i];
+			}
+
+			document.getElementById("DynamicCalSpikeInThresh").value = initialData.DynamicCalSpikeInThresh;
+			document.getElementById("StaticCalSpikeInThresh").value = initialData.StaticCalSpikeInThresh;
+			document.getElementById("Threshold_SpikeIn_CV").value = initialData.Threshold_SpikeIn_CV;
+			document.getElementById("Threshold_SpikeIn_SI").value = initialData.Threshold_SpikeIn_SI;
+			document.getElementById("Threshold_SpikeIn_TT").value = initialData.Threshold_SpikeIn_TT;
+			document.getElementById("Threshold_SpikeIn_TTSN").value = initialData.Threshold_SpikeIn_TTSN;
+
+			// upon click save overwrite the json array to send back to MATLAB
+			document.getElementById("login-submit").addEventListener("click", function (event) {
+
+				initialData.Response = "Save";
+				initialData.fcsfile = document.getElementById("fcsfile").checked;
+				initialData.matfile = document.getElementById("matfile").checked;
+				initialData.csvfile = document.getElementById("csvfile").checked;
+
+				let Selection = [];
 				for (var i = 0; i < initialData.filelocatorNum; i++) {
-					document.getElementById("filelocator").options[i].selected = initialData.filelocatorSelection[i];
+					Selection[i] = document.getElementById("filelocator").options[i].selected;
 				}
+				initialData.filelocatorSelection = Selection;
 
+				Selection = [];
 				for (var i = 0; i < initialData.outlierremovalNum; i++) {
-					document.getElementById("outlierremoval").options[i].selected = initialData.outlierremovalSelection[i];
+					Selection[i] = document.getElementById("outlierremoval").options[i].selected;
 				}
+				initialData.outlierremovalSelection = Selection;
 
+				Selection = [];
 				for (var i = 0; i < initialData.diamcalitypeNum; i++) {
-					document.getElementById("diamcalitype").options[i].selected = initialData.diamcalitypeSelection[i];
+					Selection[i] = document.getElementById("diamcalitype").options[i].selected;
 				}
+				initialData.diamcalitypeSelection = Selection;
 
-				for (var i = 0; i < initialData.noiseremovalNum; i++) {
-					document.getElementById("noiseremoval").options[i].selected = initialData.noiseremovalSelection[i];
-				}
-
+				Selection = [];
 				for (var i = 0; i < initialData.debugNum; i++) {
-					document.getElementById("debug").options[i].selected = initialData.debugSelection[i];
+					Selection[i] = document.getElementById("debug").options[i].selected;
 				}
-				// upon click save overwrite the json array to send back to MATLAB
-				document.getElementById("login-submit").addEventListener("click", function (event) {
+				initialData.debugSelection = Selection;
 
-					initialData.Response = "Save";
-					initialData.fcsfile = document.getElementById("fcsfile").checked;
-					initialData.matfile = document.getElementById("matfile").checked;
-					initialData.csvfile = document.getElementById("csvfile").checked;
+				initialData.DynamicCalSpikeInThresh = document.getElementById("DynamicCalSpikeInThresh").value;
+				initialData.StaticCalSpikeInThresh = document.getElementById("StaticCalSpikeInThresh").value;
+				initialData.Threshold_SpikeIn_CV = document.getElementById("Threshold_SpikeIn_CV").value;
+				initialData.Threshold_SpikeIn_SI = document.getElementById("Threshold_SpikeIn_SI").value;
+				initialData.Threshold_SpikeIn_TT = document.getElementById("Threshold_SpikeIn_TT").value;
+				initialData.Threshold_SpikeIn_TTSN = document.getElementById("Threshold_SpikeIn_TTSN").value;
 
-					let Selection = [];
-					for (var i = 0; i < initialData.filelocatorNum; i++) {
-						Selection[i] = document.getElementById("filelocator").options[i].selected;
-					}
-					initialData.filelocatorSelection = Selection;
+				htmlComponent.Data = JSON.stringify(initialData);
 
-					Selection = [];
-					for (var i = 0; i < initialData.outlierremovalNum; i++) {
-						Selection[i] = document.getElementById("outlierremoval").options[i].selected;
-					}
-					initialData.outlierremovalSelection = Selection;
+			});
 
-					Selection = [];
-					for (var i = 0; i < initialData.diamcalitypeNum; i++) {
-						Selection[i] = document.getElementById("diamcalitype").options[i].selected;
-					}
-					initialData.diamcalitypeSelection = Selection;
+			// upon click reset overwrite the json array to send back to MATLAB
+			document.getElementById("reset").addEventListener("click", function (event) {
+				initialData.Response = "Reset";
+				htmlComponent.Data = JSON.stringify(initialData);
 
-					Selection = [];
-					for (var i = 0; i < initialData.noiseremovalNum; i++) {
-						Selection[i] = document.getElementById("noiseremoval").options[i].selected;
-					}
-					initialData.noiseremovalSelection = Selection;
+			});
+		};
 
-					Selection = [];
-					for (var i = 0; i < initialData.debugNum; i++) {
-						Selection[i] = document.getElementById("debug").options[i].selected;
-					}
-					initialData.debugSelection = Selection;
-
-					htmlComponent.Data = JSON.stringify(initialData);
-
-				});
-
-			};
-
-
-
-		</script>
+	</script>
 </body>
 
 </html>
