--- a/source_code/HTML/Preferences.html
+++ b/source_code/HTML/Preferences.html
@@ -21,203 +21,204 @@
 			<div class="col-md-6 col-md-offset-3">
 				<div class="panel panel-login">
 					<div class="panel-body">
-						<div class="titlerow" style="padding:0%; border: 0px;">
-							<h3>General</h3>
-						</div>
-						<div class="row">
+						<button type="button" class="collapsible">General Settings</button>
+						<div class="content">
 
-							<div class="column">
-								<div class="inputs">
-									<p>Default outputs:</p>
-									<label class="form-control">
-										<input type="checkbox" name="checkbox" id="fcsfile" />
-										.fcs files
-									</label>
-									<label class="form-control">
-										<input type="checkbox" name="checkbox" id="matfile" />
-										.mat files
-									</label>
-									<label class="form-control">
-										<input type="checkbox" name="checkbox" id="xlsxfile" />
-										.xlsx files
-									</label>
-									<label class="form-control">
-										<input type="checkbox" name="checkbox" id="jsonfile" />
-										.json files
-									</label>
+							<div class="row">
+
+								<div class="column">
+									<div class="inputs">
+										<p>Default outputs:</p>
+										<label class="form-control">
+											<input type="checkbox" name="checkbox" id="fcsfile" />
+											.fcs files
+										</label>
+										<label class="form-control">
+											<input type="checkbox" name="checkbox" id="matfile" />
+											.mat files
+										</label>
+										<label class="form-control">
+											<input type="checkbox" name="checkbox" id="xlsxfile" />
+											.xlsx files
+										</label>
+										<label class="form-control">
+											<input type="checkbox" name="checkbox" id="jsonfile" />
+											.json files
+										</label>
+									</div>
+
 								</div>
-						
+
+								<div class="column">
+									<div class="inputs">
+
+										<p>File locator:</p>
+										<select class="form-group form-control form-control-lg dropdown"
+											name="filelocator" id="filelocator">
+											<option>'_cc'</option>
+											<option>'_ss00'</option>
+										</select>
+									</div>
+
+									<div class="inputs">
+										<p>Debug Mode:</p>
+										<select class="form-group form-control form-control-lg dropdown" name="debug"
+											id="debug">
+											<option>on</option>
+											<option>off</option>
+										</select>
+									</div>
+
+									<div class="inputs">
+										<p>Cohort Analysis:</p>
+										<select class="form-group form-control form-control-lg dropdown"
+											name="cohortAnalysis" id="cohortAnalysis">
+											<option>on</option>
+											<option>off</option>
+										</select>
+									</div>
+
+									<div class="inputs">
+										<p>Parallel Computing:</p>
+										<select class="form-group form-control form-control-lg dropdown"
+											name="ParallelComputing" id="ParallelComputing" disabled>
+											<option>on</option>
+											<option>off</option>
+										</select>
+									</div>
+								</div>
+
 							</div>
+						</div>
 
-							<div class="column">
-								<div class="inputs">
+						<button type="button" class="collapsible">Diameter Calibration</button>
+						<div class="content">
+							<div class="row">
 
-									<p>File locator:</p>
-									<select class="form-group form-control form-control-lg dropdown" name="filelocator"
-										id="filelocator">
-										<option>'_cc'</option>
-										<option>'_ss00'</option>
-									</select>
+								<div class="column">
+									<div class="inputs">
+
+										<p>Diam Calibration:</p>
+										<select class="form-group form-control form-control-lg dropdown"
+											name="diamcalitype" id="diamcalitype">
+											<option>dynamic</option>
+											<option>static</option>
+										</select>
+									</div>
+
 								</div>
 
+								<div class="column">
+									<div class="inputs">
+
+										<p>Dynamic Event Limit:</p>
+										<input class="form-control" type="number" id="DynamicCalSpikeInThresh">
+									</div>
+
+									<div class="inputs">
+
+										<p>Static Event Limit:</p>
+										<input class="form-control" type="number" id="StaticCalSpikeInThresh">
+									</div>
+
+								</div>
+							</div>
+						</div>
+
+						<button type="button" class="collapsible">Outlier Removal</button>
+						<div class="content">
+
+							<div class="row">
 								<div class="inputs">
-									<p>Debug Mode:</p>
-									<select class="form-group form-control form-control-lg dropdown" name="debug"
-										id="debug">
+									<p>Outlier Removal:</p>
+									<select class="form-group form-control form-control-lg dropdown"
+										name="outlierremoval" id="outlierremoval">
 										<option>on</option>
 										<option>off</option>
 									</select>
 								</div>
-
 								<div class="inputs">
-									<p>Cohort Analysis:</p>
-									<select class="form-group form-control form-control-lg dropdown" name="cohortAnalysis"
-										id="cohortAnalysis">
-										<option>on</option>
-										<option>off</option>
-									</select>
-								</div>
 
-								<div class="inputs">
-									<p>Parallel Computing:</p>
-									<select class="form-group form-control form-control-lg dropdown" name="ParallelComputing"
-										id="ParallelComputing" disabled>
-										<option>on</option>
-										<option>off</option>
-									</select>
+									<p>Removal Basis:</p>
+									<label class="form-control">
+										<input type="checkbox" name="checkbox" id="OutlierRemoval_Pressure" />
+										P1 Pressure
+									</label>
+									<label class="form-control">
+										<input type="checkbox" name="checkbox" id="OutlierRemoval_TransitTime" />
+										Transit Time
+									</label>
+									<label class="form-control">
+										<input type="checkbox" name="checkbox" id="OutlierRemoval_CV" />
+										CV
+									</label>
+									<label class="form-control">
+										<input type="checkbox" name="checkbox" id="OutlierRemoval_SI" />
+										SI
+									</label>
+									<label class="form-control">
+										<input type="checkbox" name="checkbox" id="OutlierRemoval_TTSN" />
+										S2N/TT
+									</label>
 								</div>
 							</div>
 
-						</div>
+							<div class="titlerow" style="padding:0%; border: 0px;">
+								<h4>Threshold Ranges</h4>
+							</div>
+							<div class="row">
 
-						<div class="titlerow" style="padding:0%; border: 0px;">
-							<h3>Diameter Calibration</h3>
-						</div>
+								<div class="column">
 
-						<div class="row">
+									<div class="inputs">
+										<p>CV Range:</p>
+										<input class="form-control" type="number" id="Threshold_SpikeIn_CV" value="">
+									</div>
 
-							<div class="column">
-								<div class="inputs">
+									<div class="inputs">
 
-									<p>Diam Calibration:</p>
-									<select class="form-group form-control form-control-lg dropdown" name="diamcalitype"
-										id="diamcalitype">
-										<option>dynamic</option>
-										<option>static</option>
-									</select>
+										<p>SI Range:</p>
+										<input class="form-control" type="number" id="Threshold_SpikeIn_SI">
+									</div>
+
 								</div>
 
+								<div class="column">
+
+									<div class="inputs">
+										<p>TT Range:</p>
+										<input class="form-control" type="number" id="Threshold_SpikeIn_TT">
+									</div>
+
+									<div class="inputs">
+										<p>SNTT Range:</p>
+										<input class="form-control" type="number" id="Threshold_SpikeIn_TTSN">
+									</div>
+
+								</div>
 							</div>
 
-							<div class="column">
-								<div class="inputs">
-
-									<p>Dynamic Event Limit:</p>
-									<input class="form-control" type="number" id="DynamicCalSpikeInThresh">
-								</div>
-
-								<div class="inputs">
-
-									<p>Static Event Limit:</p>
-									<input class="form-control" type="number" id="StaticCalSpikeInThresh">
-								</div>
-
-							</div>
-						</div>
-
-
-						<div class="titlerow" style="padding:0%; border: 0px;">
-							<h3>Outlier Removal</h3>
-						</div>
-						<div class="row">
-							<div class="inputs">
-								<p>Outlier Removal:</p>
-								<select class="form-group form-control form-control-lg dropdown"
-									name="outlierremoval" id="outlierremoval">
-									<option>on</option>
-									<option>off</option>
-								</select>
-							</div>
-							<div class="inputs">
-
-								<p>Removal Basis:</p>
-								<label class="form-control">
-									<input type="checkbox" name="checkbox" id="OutlierRemoval_Pressure" />
-									P1 Pressure
-								</label>
-								<label class="form-control">
-									<input type="checkbox" name="checkbox" id="OutlierRemoval_TransitTime" />
-									Transit Time
-								</label>
-								<label class="form-control">
-									<input type="checkbox" name="checkbox" id="OutlierRemoval_CV" />
-									CV
-								</label>
-								<label class="form-control">
-									<input type="checkbox" name="checkbox" id="OutlierRemoval_SI" />
-									SI
-								</label>
-								<label class="form-control">
-									<input type="checkbox" name="checkbox" id="OutlierRemoval_TTSN" />
-									S2N/TT
-								</label>
-							</div>
-						</div>
-
-						<div class="titlerow" style="padding:0%; border: 0px;">
-							<h4>Threshold Ranges</h4>
-						</div>
-						<div class="row">
-
-							<div class="column">
-
-								<div class="inputs">
-									<p>CV Range:</p>
-									<input class="form-control" type="number" id="Threshold_SpikeIn_CV" value="">
-								</div>
-
-								<div class="inputs">
-
-									<p>SI Range:</p>
-									<input class="form-control" type="number" id="Threshold_SpikeIn_SI">
-								</div>
-
+							<div class="col-lg-12">
+								<form id="pref-form" action="#" method="post" role="form" style="display: block;">
+									<div class="col-sm-8 col-sm-offset-2">
+										<button type="button" name="login-submit" id="reset" tabindex="4"
+											class="form-control btn btn-login" onclick="">Reset</button>
+									</div>
+								</form>
 							</div>
 
-							<div class="column">
-
-								<div class="inputs">
-									<p>TT Range:</p>
-									<input class="form-control" type="number" id="Threshold_SpikeIn_TT">
-								</div>
-
-								<div class="inputs">
-									<p>SNTT Range:</p>
-									<input class="form-control" type="number" id="Threshold_SpikeIn_TTSN">
-								</div>
-
+							<div class="col-lg-12">
+								<form id="pref-form" action="#" method="post" role="form"
+									style="display: block; padding-top: 15px">
+									<div class="col-sm-8 col-sm-offset-2">
+										<button type="button" name="login-submit" id="login-submit" tabindex="4"
+											class="form-control btn btn-login" onclick="">Save</button>
+									</div>
+								</form>
 							</div>
-						</div>
-
-						<div class="col-lg-12">
-							<form id="pref-form" action="#" method="post" role="form" style="display: block;">
-								<div class="col-sm-8 col-sm-offset-2">
-									<button type="button" name="login-submit" id="reset" tabindex="4"
-										class="form-control btn btn-login" onclick="">Reset</button>
-								</div>
-							</form>
-						</div>
-
-						<div class="col-lg-12">
-							<form id="pref-form" action="#" method="post" role="form"
-								style="display: block; padding-top: 15px">
-								<div class="col-sm-8 col-sm-offset-2">
-									<button type="button" name="login-submit" id="login-submit" tabindex="4"
-										class="form-control btn btn-login" onclick="">Save</button>
-								</div>
-							</form>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</div>
@@ -343,6 +344,24 @@
 		};
 
 	</script>
+
+	<script type="text/javascript">
+		var coll = document.getElementsByClassName("collapsible");
+		var i;
+
+		for (i = 0; i < coll.length; i++) {
+			coll[i].addEventListener("click", function () {
+				this.classList.toggle("active");
+				var content = this.nextElementSibling;
+				if (content.style.display === "block") {
+					content.style.display = "none";
+				} else {
+					content.style.display = "block";
+				}
+			});
+		}
+	</script>
+
 </body>
 
 </html>
